<resources>
    <string name="app_name">SmartfarmForCPS</string>

    //activity_loading.xml
    <string name="smartfarm">CPS world\n : SMART FARM </string>

    //activity_login.xml
    <string name="id">ID</string>
    <string name="password">비밀번호</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>

    //activity_register.xml
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="repititionCheck">중복확인</string>

    <string name="passwordCheck">비밀번호\n확인</string>
    <string name="passwordCheck2">비밀번호 확인</string>

    <string name="telephone">전화번호</string>

    //activity_main.xml
    <string name="today_yield">오늘의 수확량</string>
    <string name="yield_number">개</string>
    <string name="temperature_control">온도 제어</string>
    <string name="temperature_control_tommorow">내일 온도제어</string>
    <string name="temperature_number">도</string>

    <string name="add">add</string>

    <string name="prediction">예정</string>
    <string name="home">home</string>
    <string name="reinforcement_learning">강화학습</string>
    <string name="machine_learning">머신러닝</string>
    <string name="user">user</string>

    //activity_temperature_sensor.xml
    <string name="temperature_sensor">온도 센서</string>
    <string name="current_value">현재 값</string>
    <string name="compare">전일 대비</string>
    <string name="compare2">% 효율 상승</string>

    //activity_machine_learning_choose.xml
    <string name="machine_learning_choose">당신의 머신 러닝 모델을 골라주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>