<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6B657"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameTy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/ageSpinner"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:entries="@array/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/nameTy" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:entries="@array/gender"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/ageSpinner" />

    <TextView
        android:id="@+id/idRegister"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <EditText
        android:id="@+id/idRegisterTy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/idRegister"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <Button
        android:id="@+id/idRepititionCheckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="44dp"
        android:text="@string/repititionCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/idRegisterTy"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <TextView
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRegister" />

    <EditText
        android:id="@+id/passwordRegisterTy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/passwordRegister"
        app:layout_constraintTop_toBottomOf="@+id/idRegisterTy" />

    <TextView
        android:id="@+id/passwordCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/passwordCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <EditText
        android:id="@+id/editTextTextPasswordCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/passwordCheck2"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/passwordCheck"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTy" />

    <Button
        android:id="@+id/passwordCheckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/passwordCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPasswordCheck"
        app:layout_constraintTop_toBottomOf="@+id/idRepititionCheckButton" />

    <TextView
        android:id="@+id/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/telephone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCheck" />

    <EditText
        android:id="@+id/telephoneTy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/telephone"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordCheck" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>